@@ -137,9 +137,6 @@ The following table describes some methods you can use to customize the
    * - ``forEach()``
      - | Performs the given action on each element returned by the ``distinct()`` operation.
 
-   * - ``maxTime()``
-     - | Sets the maximum amount of time to allow the operation to run, in milliseconds.
-
 For a complete list of methods you can use to modify the ``distinct()`` method, see
 the `DistinctIterable <{+api+}/mongodb-driver-kotlin-sync/com.mongodb.kotlin.client/-distinct-iterable/index.html>`__ API documentation.
 
